# AI_Text_Detector

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: train_config.yaml
data/: README.md
models/: README.md
results/: classification_report.txt  metrics.json  test_confusion_matrix.json  test_metrics.json  validation_confusion_matrix.json
scripts/: create_splits.py  evaluate.sh  predict_example.sh  train.sh  visualize.sh
src/ai_detector/: data.py  evaluate.py  features.py  model.py  predict.py  train.py  utils.py  visualize.py
src/ai_text_detector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
