[build-system]
requires = ['setuptools>=68.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'ai_text_detector'
version = '0.1.0'
description = 'AI-generated text detection pipeline using transformer-based text classification'
requires-python = '>=3.10'

[tool.setuptools.packages.find]
where = ['src']